@@ -1,3 +1,10 @@
+2004-01-07 Braden McDaniel  <braden@endoframe.com>
+
+	Removed unused member "openvrml::gl::viewer::rotation_changed".
+
+	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
+	* src/libopenvrml-gl/openvrml/gl/viewer.h
+
 2004-01-01 Braden McDaniel  <braden@endoframe.com>
 
 	Added operator* implementations for vec2f and vec3f that take a
